--- a/app/src/main/res/drawable-v24/boderradius50.xml
+++ b/app/src/main/res/drawable-v24/boderradius50.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#F8F7F7"/>
-<!--    <stroke-->
-<!--        android:width="3dp"-->
-<!--        android:color="#0FECFF" />-->
-
+    <solid android:color="#FFFFFF"/>
+  <!--  <stroke
+        android:width="3dp"
+        android:color="#0FECFF" />
+-->
     <corners
-        android:bottomRightRadius="15dp"
-        android:bottomLeftRadius="15dp"
-        android:topLeftRadius="15dp"
-        android:topRightRadius="15dp"/>
+       android:radius="15dp"/>
 </shape>
