--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -11,104 +11,109 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#F9514F"
+        android:gravity="center"
         android:text="Tìm Kiếm"
+        android:textColor="#181725"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:textColor="#181725"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/edtExplore"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="65dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/bg_edit_text"
-        android:drawableStart="@drawable/explore_item_search"
-        android:drawablePadding="12dp"
-        android:hint="@string/explore"
-        android:paddingStart="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="6dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg_borders_search"
+        android:backgroundTint="#F2F3F2"
+        app:iconifiedByDefault="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtExplore">
+        app:layout_constraintTop_toBottomOf="@+id/tvTimKiem"
+        app:queryBackground="@null"
+        app:queryHint="Search for posts and people" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="6dp"
+        android:background="@drawable/bg_borders_sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchView">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="148dp"
-            android:layout_height="110dp"
-            android:layout_margin="10dp"
-            app:cardCornerRadius="3dp">
+            android:id="@+id/cardView5"
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
+            android:layout_margin="7dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/img_sp"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                android:src="@drawable/img_sp" />
+
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:layout_marginLeft="174dp"
+            android:id="@+id/textView17"
+            android:layout_width="0dp"
+            android:layout_height="55dp"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="10dp"
             android:text="Cơm gà nướng mật ong"
+            android:textColor="#000000"
             android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="#181725"
-            android:layout_width="194dp"
-            android:layout_height="52dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.157"
+            app:layout_constraintStart_toEndOf="@+id/cardView5"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:layout_width="39dp"
-            android:layout_height="20dp"
-            android:text="2gam"
-            android:textSize="14sp"
-            android:textColor="#7C7C7C"
-            android:layout_marginLeft="174dp"
-            android:layout_marginTop="67dp"/>
-
-        <TextView
-            android:layout_width="72dp"
-            android:layout_height="20dp"
-            android:text="45.000đ"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="#181725"
-            android:layout_marginLeft="174dp"
-            android:layout_marginTop="92dp"/>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/textView18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="342dp"
-            android:layout_marginTop="86dp">
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="5dp"
+            android:text="2gam"
+            android:textColor="#7C7C7C"
+            android:textSize="14sp"
+            app:layout_constraintStart_toEndOf="@+id/cardView5"
+            app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
-            <TextView
-                android:layout_width="24dp"
-                android:layout_height="26dp"
-                android:background="@drawable/explore_item_them"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:text="45.000 đ"
+            android:textColor="#000000"
+            android:textSize="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/cardView5"
+            app:layout_constraintTop_toBottomOf="@+id/textView18"
+            app:layout_constraintVertical_bias="0.0" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"
+            android:src="@drawable/add_item"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
